--- a/restaurant2.html
+++ b/restaurant2.html
@@ -77,6 +77,10 @@
           <div id="dessert" class="m-dessert">
             <p id="category-name">Desserts</p>
           </div>
+          
+          <div id="drink" class="m-drink">
+            <p id="category-name">Drink</p>
+          </div>
         </div>
 
         <div id="cart-page" class="cart-toggle">
@@ -160,6 +164,9 @@
           </div>
           <div id="dessert" class="m-dessert">
             <p id="category-name">Desserts</p>
+          </div>
+           <div id="drink" class="m-drink">
+            <p id="category-name">Drink</p>
           </div>
         </div>
       </div>
