--- a/restaurant2.html
+++ b/restaurant2.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0,viewport-fit=cover"
     />
     <title>Food Website</title>
-    <link rel="stylesheet" href="style.css\style2.css" />
+    <link rel="stylesheet" href="style\style3.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -19,14 +19,13 @@
     <div class="container" id="container">
       <div id="menu">
         <div class="title">
-          <img src="/images\Inside-Rail-Logo-03.png" alt="" />
+          <img src="images\logo2.png" alt="" />
         </div>
         <div class="menu-item">
           <a href="#">About</a>
           <a href="#">Services</a>
           <a href="#">Your Orders</a>
           <a href="#">Wishlists</a>
-          <a href="#">Cart</a>
           <a href="#">Contact</a>
           <a href="#">Checkout</a>
         </div>
@@ -36,7 +35,7 @@
         <div id="header">
           <div class="add-box">
             <i class="fa fa-map-marker your-address" id="add-address">
-              Your Address</i
+              Your Location</i
             >
           </div>
           <div class="util">
@@ -77,7 +76,7 @@
           <div id="dessert" class="m-dessert">
             <p id="category-name">Desserts</p>
           </div>
-          
+
           <div id="drink" class="m-drink">
             <p id="category-name">Drink</p>
           </div>
@@ -124,7 +123,7 @@
     <div id="mobile-view" class="mobile-view">
       <div class="mobile-top">
         <div class="logo-box">
-          <img src="/images\Inside-Rail-Logo-03.png" alt="" id="logo" />
+          <img src="images\logo2.png" alt="" id="logo" />
           <i class="fa fa-map-marker your-address" id="m-add-address">
             Your Address</i
           >
@@ -132,7 +131,6 @@
         <div class="top-menu">
           <i class="fa fa-search"></i>
           <i class="fa fa-tag"></i>
-          <i class="fa fa-heart-o"></i>
           <i class="fa fa-cart-plus" id="m-cart-plus"> 0</i>
         </div>
       </div>
@@ -165,7 +163,7 @@
           <div id="dessert" class="m-dessert">
             <p id="category-name">Desserts</p>
           </div>
-           <div id="drink" class="m-drink">
+          <div id="drink" class="m-drink">
             <p id="category-name">Drink</p>
           </div>
         </div>
@@ -178,6 +176,6 @@
         <p>Orders</p>
       </div>
     </div>
-    <script src="index.js" type="module"></script>
+    <script src="Js-file\index3.js" type="module"></script>
   </body>
 </html>
